objects/SO_Design_Brief__c.object
<CustomObject>
    <label>Design Brief</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Design Briefs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_Brand__c</fullName>
        <formula>SO_Quote__r.Opportunity.SO_Brand__r.Name</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Model__c</fullName>
        <formula>SO_Quote__r.Opportunity.SO_Model__r.Name</formula>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Paint__c</fullName>
        <label>Paint</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Design Briefs</relationshipLabel>
        <relationshipName>Design_Briefs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Design_Brief_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Duotone__c</fullName>
        <label>Duotone</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_B_Pillar__c</fullName>
        <label>B-Pillar</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Bolsters__c</fullName>
        <label>Bolsters</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_D_Finisher__c</fullName>
        <label>D-Finisher</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Derivative__c</fullName>
        <formula>SO_Quote__r.Opportunity.SO_Derivative__r.Name</formula>
        <label>Derivative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Embroidery__c</fullName>
        <label>Embroidery</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Floor_Mats__c</fullName>
        <inlineHelpText>Please include details of the mat, binding and stitch colour</inlineHelpText>
        <label>Floor Mats</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Glass_Roof__c</fullName>
        <label>Glass Roof</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Glass</fullName>
                    <default>true</default>
                    <label>No Glass</label>
                </value>
                <value>
                    <fullName>Fixed Glass</fullName>
                </value>
                <value>
                    <fullName>Sliding Glass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Headlining__c</fullName>
        <inlineHelpText>Please include details of the colour and finish</inlineHelpText>
        <label>Headlining</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Model_Year__c</fullName>
        <formula>TEXT( SO_Quote__r.Opportunity.SO_Model_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Seat_Backs__c</fullName>
        <label>Seat Backs</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Seat_Style__c</fullName>
        <label>Seat Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quilted</fullName>
                </value>
                <value>
                    <fullName>Poltrona Frau</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Wheel_Base__c</fullName>
        <formula>TEXT( SO_Quote__r.Opportunity.SO_Wheel_Base__c )</formula>
        <label>Wheel Base</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Doors_Lower__c</fullName>
        <label>Doors - Lower</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Series_Name__c</fullName>
        <formula>SO_Quote__r.Opportunity.SO_Series_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Series Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Wheel_Style__c</fullName>
        <label>Wheel Style</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_A_B_C_Pillar__c</fullName>
        <label>A B &amp; C Pillar</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Design_Packs__c</fullName>
        <label>Design Packs</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Doors_Topper__c</fullName>
        <label>Doors - Topper</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_To_be_Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To be Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Tread_Plates__c</fullName>
        <label>Tread Plates</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Carpet_Colour__c</fullName>
        <label>Carpet Colour</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Centre_Panels__c</fullName>
        <label>Centre Panels</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Colour_Finish__c</fullName>
        <label>Finish</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Contrast_Roof__c</fullName>
        <label>Contrast Roof</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Decals_Design__c</fullName>
        <label>Decals Design</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Doors_Armrest__c</fullName>
        <label>Doors - Armrest</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Expected_Date__c</fullName>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Hand_of_Drive__c</fullName>
        <formula>TEXT( SO_Quote__r.Opportunity.SO_Hand_of_Drive__c)</formula>
        <label>Hand of Drive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Vehicle_Glass__c</fullName>
        <label>Glass</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Glass</fullName>
                    <default>true</default>
                    <label>Standard Glass</label>
                </value>
                <value>
                    <fullName>Privacy Glass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Veneer_Design__c</fullName>
        <inlineHelpText>Please include details of any required inlay</inlineHelpText>
        <label>Veneer</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Steering_Wheel__c</fullName>
        <inlineHelpText>Please include details of the Rim and Drivers Airbag requirements</inlineHelpText>
        <label>Steering Wheel</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Time_in_Design__c</fullName>
        <formula>IF(ISBLANK(SO_Design_Brief_Submitted_Date__c),null,If(ISBLANK(SO_Render_Pack_Received_Date__c),(TODAY()-SO_Design_Brief_Submitted_Date__c),(SO_Render_Pack_Received_Date__c - SO_Design_Brief_Submitted_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Design (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Confirm_Message__c</fullName>
        <formula>IF(ISPICKVAL(SO_Status__c,&apos;Submitted&apos;),$Label.SO_Submit_to_Design,
IF(ISPICKVAL(SO_Status__c,&apos;Returned&apos;),$Label.SO_Return_Render_Pack,null ) )</formula>
        <label>Confirm Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Painted_Accents__c</fullName>
        <label>Painted Accents</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Personalisation__c</fullName>
        <label>Personalisation</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Rear_Load_Space__c</fullName>
        <label>Rear Load Space</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Artwork_Required__c</fullName>
        <label>Artwork Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Quote_Owner_Email__c</fullName>
        <label>Quote Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SO_Render_Pack_Amend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Render Pack Amend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Door_Mirror_Colour__c</fullName>
        <label>Door Mirror Colour</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Quote_to_be_linked__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used only for backend purpose to track the new quote which should be linked to the new Design brief</description>
        <label>Quote to be linked</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Design Briefs (Quote to be linked)</relationshipLabel>
        <relationshipName>Design_Briefs_clone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Commissioning_Plate__c</fullName>
        <label>Commissioning Plate</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Headrest_Front_Rear__c</fullName>
        <label>Headrest (Front &amp; Rear)</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_OPS_Approval_Status__c</fullName>
        <label>OPS Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Render_Pack_Correct__c</fullName>
        <label>Render Pack Correct</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Accessories_Required__c</fullName>
        <label>Accessories Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Bespoke_Request_Type__c</fullName>
        <formula>TEXT( SO_Quote__r.Opportunity.SO_Product_Offering__c )</formula>
        <label>Bespoke Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Instrument_Panel_Mid__c</fullName>
        <label>Instrument Panel Mid</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Requires_Design_Team__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Requires Design Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Script_Badging_Inner__c</fullName>
        <label>Script Badging Inner</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Script_Badging_Outer__c</fullName>
        <label>Script Badging Outer</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Within_Target_Return__c</fullName>
        <formula>IF( IF( ISBLANK(SO_Revised_Expected_Date__c ),SO_Expected_Date__c,SO_Revised_Expected_Date__c ) &gt; SO_Render_Pack_Received_Date__c  ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Within Target Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Interior_Door_Handles__c</fullName>
        <label>Interior Door Handles</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Revised_Expected_Date__c</fullName>
        <formula>SO_Quote__r.SO_Revised_Expected_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revised Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Vehicle_Accent_Change__c</fullName>
        <label>Accent Change</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Instrument_Panel_Lower__c</fullName>
        <label>Instrument Panel Lower</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Vehicle_Brake_Calipers__c</fullName>
        <label>Brake Calipers</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Additional_Requirements__c</fullName>
        <label>Additional Requirements</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Contrast_Bolster_Stitch__c</fullName>
        <label>Contrast Bolster Stitch</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Instrument_Panel_Topper__c</fullName>
        <label>Instrument Panel Topper</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Render_Pack_Received_Date__c</fullName>
        <label>Render Pack Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Instrument_Panel_Engraving__c</fullName>
        <label>Instrument Panel Engraving</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Design_Brief_Submitted_Date__c</fullName>
        <label>Design Brief Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Doors_Armrest_Stitch_Colour__c</fullName>
        <label>Doors - Armrest Stitch Colour</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Performance_Against_Expected__c</fullName>
        <formula>IF( ISBLANK(SO_Render_Pack_Received_Date__c),TODAY(),SO_Render_Pack_Received_Date__c) - If( ISBLANK(SO_Revised_Expected_Date__c ),SO_Expected_Date__c, SO_Revised_Expected_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Beyond Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Parcel_Shelf_and_Side_Support__c</fullName>
        <inlineHelpText>Please include details of the colour and finish</inlineHelpText>
        <label>Parcel Shelf and Side Support</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Exterior_Accessories_Information__c</fullName>
        <label>Exterior Accessories Information</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Interior_Accessories_Information__c</fullName>
        <label>Interior Accessories Information</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <recordTypes>
        <fullName>SO_Closed</fullName>
        <active>true</active>
        <label>Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Read_Only</fullName>
        <active>true</active>
        <label>Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Design_Brief</fullName>
        <active>true</active>
        <label>Design Brief</label>
    </recordTypes>
    <validationRules>
        <fullName>SO_Cannot_change_Design_Brief_Name</fullName>
        <active>false</active>
        <errorConditionFormula>(RecordType.DeveloperName == &apos;SO_Read_Only&apos; || RecordType.DeveloperName == &apos;SO_Design_Brief&apos; || RecordType.DeveloperName == &apos;SO_Closed&apos;) &amp;&amp; NOT(ISNEW()) &amp;&amp; ISCHANGED(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot change the Name</errorMessage>
    </validationRules>
</CustomObject>